--- a/src/mountain-pages/mountain-pages.html
+++ b/src/mountain-pages/mountain-pages.html
@@ -8,10 +8,10 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../shared-styles.html">
 
-<dom-module id="mountain-view3">
+<dom-module id="mountain-pages">
   <template>
     <style include="shared-styles">
       :host {
@@ -23,17 +23,17 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     <div class="card">
       <div class="circle">3</div>
-      <h1>View Three</h1>
+      <h1>Pages</h1>
       <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
       <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
     </div>
   </template>
 
   <script>
-    class MountainView3 extends Polymer.Element {
-      static get is() { return 'mountain-view3'; }
+    class MountainPages extends Polymer.Element {
+      static get is() { return 'mountain-pages'; }
     }
 
-    window.customElements.define(MountainView3.is, MountainView3);
+    window.customElements.define(MountainPages.is, MountainPages);
   </script>
 </dom-module>
