--- a/src/mountain-users/mountain-users.html
+++ b/src/mountain-users/mountain-users.html
@@ -8,10 +8,10 @@ Code distributed by Google as part of the polymer project is also
 subject to an additional IP rights grant found at http://polymer.github.io/PATENTS.txt
 -->
 
-<link rel="import" href="../bower_components/polymer/polymer-element.html">
-<link rel="import" href="shared-styles.html">
+<link rel="import" href="../../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../shared-styles.html">
 
-<dom-module id="mountain-view2">
+<dom-module id="mountain-users">
   <template>
     <style include="shared-styles">
       :host {
@@ -22,18 +22,18 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     </style>
 
     <div class="card">
-      <div class="circle">2</div>
-      <h1>View Two</h1>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.</p>
-      <p>Id nam odio natum malorum, tibique copiosae expetenda mel ea.Detracto suavitate repudiandae no eum. Id adhuc minim soluta nam.Id nam odio natum malorum, tibique copiosae expetenda mel ea.</p>
+      <div class="circle">1</div>
+      <h1>Users</h1>
+      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
+      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
     </div>
   </template>
 
   <script>
-    class MountainView2 extends Polymer.Element {
-      static get is() { return 'mountain-view2'; }
+    class MountainUsers extends Polymer.Element {
+      static get is() { return 'mountain-users'; }
     }
 
-    window.customElements.define(MountainView2.is, MountainView2);
+    window.customElements.define(MountainUsers.is, MountainUsers);
   </script>
 </dom-module>
