--- a/src/mountain-users/mountain-users.html
+++ b/src/mountain-users/mountain-users.html
@@ -11,6 +11,12 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../../bower_components/polymer/polymer-element.html">
 <link rel="import" href="../shared-styles.html">
 
+<link rel="import" href="../../bower_components/paper-checkbox/paper-checkbox.html">
+<link rel="import" href="../../bower_components/vaadin-grid/vaadin-grid.html">
+<link rel="import" href="../../bower_components/vaadin-grid/vaadin-grid-sorter.html">
+
+<link rel="import" href="../polymerhori/horizon-query.html">
+
 <dom-module id="mountain-users">
   <template>
     <style include="shared-styles">
@@ -21,17 +27,58 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       }
     </style>
 
+    <horizon-query id="users" path="/users" data="{{users}}">
+    </horizon-query>
+
     <div class="card">
       <div class="circle">1</div>
       <h1>Users</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
+      <template is="dom-if" if="{{users}}">
+
+        <paper-checkbox checked="{{multiSort}}">Enable Multi-Sorting</paper-checkbox>
+
+        <vaadin-grid aria-label="Sorting Example" items="[[users]]" multi-sort="[[multiSort]]">
+
+          <vaadin-grid-column width="50px" flex-grow="0">
+            <template class="header">#</template>
+            <template>[[index]]</template>
+          </vaadin-grid-column>
+
+          <vaadin-grid-column>
+            <template class="header">
+              <vaadin-grid-sorter path="email">Email</vaadin-grid-sorter>
+            </template>
+            <template>[[item.email]]</template>
+          </vaadin-grid-column>
+
+          <vaadin-grid-column>
+            <template class="header">
+              <vaadin-grid-sorter path="name" direction="asc">Name</vaadin-grid-sorter>
+            </template>
+            <template>[[item.name]]</template>
+          </vaadin-grid-column>
+
+        </vaadin-grid>
+      </template>
     </div>
   </template>
 
   <script>
     class MountainUsers extends Polymer.Element {
       static get is() { return 'mountain-users'; }
+
+      static get properties() {
+        return {
+          users: {
+              type: Array,
+              observer: '_usersChanged'
+          },
+        }
+      }
+
+      _usersChanged(users) {
+        console.log(users);
+      }
     }
 
     window.customElements.define(MountainUsers.is, MountainUsers);
